tests/schemas/error/009_missing_enum_name.fcp
version: "3"

enum {
    Variant1 = 0,
    Variant2 = 0,
}
